# uptime-tracker

./: index.html  package-lock.json  package.json
src/: index.ts  style.css
uptime-crate/: Cargo.toml
uptime-crate/src/: lib.rs
