[package]
name = "uptime-crate"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4.64" }
reqwest = { version = "0.13.2" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5" }